change favicon and more simplified website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>TOPSIS Calculator | Kelompok 4 STPK</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Start CSS Section -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,26 +17,12 @@
             <div class="card-header">
                 TOPSIS Calculator
             </div>
-            <div class="card-body overflow-auto">
+            <div class="card-body overflow-auto" id="main">
                 <button type="button" class="btn btn-pink v-center" id="getStarted" data-toggle="modal" data-target="#modalSetUp">
                     Get Started
                 </button>
 
-                <div class="row" id="CAList">
-                    <div class="col-md-6">
-                        <h5>Daftar Kriteria</h5>
-                        <table class="table mt-4" id="criteriaList">
-                            <thead></thead>
-                            <tbody>
-                                
-                            </tbody>
-                            <tfoot></tfoot>
-                        </table>
-                    </div>
-                    <div class="col-md-6">
-                        <h5>Daftar Alternatif</h5>
-                    </div>
-                </div>
+                
             </div>
             <div class="card-footer text-muted">
                 Copyright &copy;2020 Muhammad Hamdi & Co. | All Rights Reserved
