Little porgress on alternative

--- a/index.html
+++ b/index.html
@@ -100,10 +100,34 @@
                                         <tfoot></tfoot>
                                     </table>
                                 </div>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-light" data-dismiss="modal">Tutup</button>
                             <button type="submit" id="saveCriteria" class="btn btn-pink">Simpan</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal Detail Alternative -->
+        <div class="modal fade" id="modalAlternative" tabindex="-1" role="dialog" aria-labelledby="modalAlternativeLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <form id="formAlternative" data-id="">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalAlternativeLabel"></h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body" id="bodyAlternative">
+                            
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-light" data-dismiss="modal">Tutup</button>
+                            <button type="submit" id="saveAlternative" class="btn btn-pink">Simpan</button>
                         </div>
                     </form>
                 </div>
