--- a/index.html
+++ b/index.html
@@ -75,16 +75,26 @@
                         </div>
                         <div class="modal-body">
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="bobot">Bobot</label>
-                                        <input type="number" name="bobot" id="bobot" class="form-control" placeholder="Bobot kriteria" required>
+                                        <input type="number" name="bobot" id="bobot" class="form-control" placeholder="Bobot" required>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="nCi">Jumlah Kategori</label>
-                                        <input type="number" name="nCi" id="nCi" class="form-control" placeholder="Jumlah kategori kriteria" required>
+                                        <input type="number" name="nCi" id="nCi" class="form-control" placeholder="Jml kategori" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label for="jenis">Jenis Kategori</label>
+                                        <select name="jenis" id="jenis" class="form-control" required>
+                                            <option value="" selected disabled>Pilih jenis</option>
+                                            <option value="0">Keuntungan</option>
+                                            <option value="1">Biaya</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
